load("@allwpilib_pip_deps//:requirements.bzl", "requirement")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_test")
load("@rules_java//java:defs.bzl", "java_binary")
load("@rules_python//python:defs.bzl", "py_binary")
load("//datalog:robotpy_native_build_info.bzl", "define_native_wrapper")
load("//datalog:robotpy_pybind_build_info.bzl", "define_pybind_library", "wpilog_extension")
load("//shared/bazel/rules:cc_rules.bzl", "wpilib_shared_and_static_library")
load("//shared/bazel/rules:java_rules.bzl", "wpilib_java_junit5_test")
load("//shared/bazel/rules:jni_rules.bzl", "wpilib_jni_cc_library", "wpilib_jni_java_library")
load("//shared/bazel/rules:packaging.bzl", "zip_java_srcs")
load("//shared/bazel/rules/publishing:publishing.bzl", "bundle_default_jni_library")
load("//shared/bazel/rules/robotpy:build_info_gen.bzl", "generate_robotpy_native_wrapper_build_info", "generate_robotpy_pybind_build_info")
load("//shared/bazel/rules/robotpy:pytest_util.bzl", "robotpy_py_test")
load("//shared/bazel/rules/robotpy:semiwrap_tool_helpers.bzl", "create_yaml_files", "scan_headers")

wpilib_shared_and_static_library(
    name = "datalog",
    srcs = glob(
        ["src/main/native/cpp/**"],
        exclude = ["src/main/native/cpp/jni/**"],
    ),
    hdrs = glob(["src/main/native/include/**"]),
    dynamic_deps = [
        "//wpiutil:shared/wpiutil",
    ],
    extra_src_pkg_files = [":datalog-java-jni-hdrs-pkg"],
    includes = [
        "src/main/native/cpp",
        "src/main/native/include",
    ],
    static_deps = [
        "//wpiutil:static/wpiutil",
    ],
    strip_include_prefix = "src/main/native/include",
    visibility = ["//visibility:public"],
    deps = [
        "//wpiutil",
    ],
)

wpilib_jni_cc_library(
    name = "datalogjni",
    srcs = glob(["src/main/native/cpp/jni/**"]),
    dynamic_deps = [
        ":shared/datalog",
        "//wpiutil:shared/wpiutil",
    ],
    java_dep = ":datalog-java",
    visibility = ["//visibility:public"],
    deps = [
        ":datalog",
    ],
)

wpilib_jni_java_library(
    name = "datalog-java",
    srcs = glob(["src/main/java/**/*.java"]),
    maven_artifact_name = "datalog-java",
    maven_group_id = "edu.wpi.first.datalog",
    native_libs = [":datalogjni"],
    visibility = ["//visibility:public"],
    deps = [
        "//wpiutil:wpiutil-java",
        "@maven//:us_hebi_quickbuf_quickbuf_runtime",
    ],
)

zip_java_srcs(name = "datalog")

py_binary(
    name = "datalog_example",
    srcs = ["examples/printlog/datalog.py"],
    main = "examples/printlog/datalog.py",
    target_compatible_with = select({
        "@rules_bzlmodrio_toolchains//constraints/is_systemcore:systemcore": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)

cc_binary(
    name = "printlog",
    srcs = ["examples/printlog/printlog.cpp"],
    deps = [
        ":datalog",
        "//wpiutil",
    ],
)

cc_binary(
    name = "writelog",
    srcs = ["examples/writelog/writelog.cpp"],
    deps = [
        ":datalog",
        "//wpiutil",
    ],
)

java_binary(
    name = "printlog-java",
    srcs = ["src/printlog/java/printlog/PrintLog.java"],
    main_class = "printlog.PrintLog",
    deps = [
        ":datalog-java",
    ],
)

cc_test(
    name = "datalog-cpp-test",
    size = "small",
    srcs = glob(["src/test/native/**/*.cpp"]),
    tags = [
        "exclusive",
        "no-asan",
        "no-tsan",
    ],
    deps = [
        ":datalog",
        "//thirdparty/googletest",
        "//wpiutil:wpiutil-testlib",
    ],
)

wpilib_java_junit5_test(
    name = "datalog-java-test",
    srcs = glob(["src/test/java/**/*.java"]),
    tags = ["exclusive"],
    deps = [
        ":datalog-java",
        "//wpiutil:wpiutil-java",
    ],
)

bundle_default_jni_library(
    name = "publishing_bundle",
    group_id = "edu.wpi.first.datalog",
    library_base_name = "datalog",
)

generate_robotpy_native_wrapper_build_info(
    name = "robotpy-native-datalog-generator",
    pyproject_toml = "src/main/python/native-pyproject.toml",
)

define_native_wrapper(
    name = "robotpy-native-datalog",
    pyproject_toml = "src/main/python/native-pyproject.toml",
)

generate_robotpy_pybind_build_info(
    name = "robotpy-datalog-generator",
    additional_srcs = [":robotpy-native-datalog.copy_headers"],
    package_root_file = "src/main/python/wpilog/__init__.py",
    pkgcfgs = [
        "//datalog:native/datalog/robotpy-native-datalog.pc",
        "//wpiutil:native/wpiutil/robotpy-native-wpiutil.pc",
        "//wpiutil:src/main/python/wpiutil/wpiutil.pc",
        "//wpiutil:src/main/python/wpiutil/wpiutil-casters.pc",
        "//wpiutil:src/main/python/wpiutil/wpiutil-casters.pybind11.json",
    ],
    yaml_files = glob(["src/main/python/semiwrap/*.yml"]),
)

wpilog_extension(
    srcs = ["src/main/python/src/main.cpp"],
    includes = [
        "src/main/python/datalog/",
    ],
)

define_pybind_library(name = "robotpy-wpilog")

robotpy_py_test(
    "datalog_tests",
    extra_sources = ["src/test/python/conftest.py"],
    tests = glob(
        ["src/test/python/**/*.py"],
        exclude = [
            "src/test/python/conftest.py",
            "src/test/python/run_tests.py",
        ],
    ),
    deps = [
        ":robotpy-wpilog",
        requirement("pytest"),
    ],
)

create_yaml_files(
    name = "robotpy-create-yaml",
    package_root_file = "src/main/python/wpilog/__init__.py",
    pkgcfgs = [
        "//datalog:native/datalog/robotpy-native-datalog.pc",
        "//wpiutil:native/wpiutil/robotpy-native-wpiutil.pc",
        "//wpiutil:src/main/python/wpiutil/wpiutil.pc",
        "//wpiutil:src/main/python/wpiutil/wpiutil-casters.pc",
        "//wpiutil:src/main/python/wpiutil/wpiutil-casters.pybind11.json",
    ],
    pyproject_toml = "src/main/python/pyproject.toml",
    yaml_files = glob(["src/main/python/semiwrap/**"]),
)

scan_headers(
    name = "robotpy-scan-headers",
    extra_hdrs = [":robotpy-native-datalog.copy_headers"],
    package_root_file = "src/main/python/wpilog/__init__.py",
    pkgcfgs = [
        "//datalog:src/main/python/wpilog/wpilog.pc",
        "//ntcore:src/main/python/ntcore/ntcore.pc",
        "//wpinet:src/main/python/wpinet/wpinet.pc",
        "//hal:src/main/python/hal/wpihal.pc",
        "//wpiutil:src/main/python/wpiutil/wpiutil.pc",
        "//wpiutil:src/main/python/wpiutil/wpiutil-casters.pc",
        "//wpiutil:src/main/python/wpiutil/wpiutil-casters.pybind11.json",
        "//wpimath:src/main/python/wpimath/wpimath.pc",
        "//wpimath:src/main/python/wpimath/filter/wpimath_filter.pc",
        "//wpimath:src/main/python/wpimath/geometry/wpimath_geometry.pc",
        "//wpimath:src/main/python/wpimath/kinematics/wpimath_kinematics.pc",
        "//wpimath:src/main/python/wpimath/spline/wpimath_spline.pc",
        "//wpimath:src/main/python/wpimath/_controls/wpimath_controls.pc",
        "//wpimath:src/main/python/wpimath/wpimath-casters.pc",
        "//wpimath:src/main/python/wpimath/wpimath-casters.pybind11.json",
        "//wpimath:native/wpimath/robotpy-native-wpimath.pc",
        "//wpilibc:native/wpilib/robotpy-native-wpilib.pc",
        "//hal:native/wpihal/robotpy-native-wpihal.pc",
        "//ntcore:native/ntcore/robotpy-native-ntcore.pc",
        "//datalog:native/datalog/robotpy-native-datalog.pc",
        "//wpinet:native/wpinet/robotpy-native-wpinet.pc",
        "//wpiutil:native/wpiutil/robotpy-native-wpiutil.pc",
    ],
    pyproject_toml = "src/main/python/pyproject.toml",
)
