load("//shared/bazel/rules:cc_rules.bzl", "wpilib_cc_binary")
load("//shared/bazel/rules/gen:gen-resources.bzl", "generate_resources")
load("//shared/bazel/rules/gen:gen-version-file.bzl", "generate_version_file")

generate_resources(
    name = "generate-resources",
    namespace = "dlt",
    prefix = "DLT",
    resource_files = glob(["src/main/native/resources/*"]),
)

generate_version_file(
    name = "generate-version",
    output_file = "WPILibVersion.cpp",
    template = "src/main/generate/WPILibVersion.cpp.in",
)

wpilib_cc_binary(
    name = "datalogtool",
    srcs = glob(["src/main/native/cpp/*"]) + [
        ":generate-resources",
        ":generate-version",
    ],
    defines = ["LIBSSH_STATIC"],
    tags = [
        "no-roborio",
        "wpi-cpp-gui",
    ],
    deps = [
        "//datalog:datalog.static",
        "//glass:libglass",
        "@bzlmodrio-libssh//libraries/cpp/libssh",
    ],
)
