load("//shared/bazel/rules:cc_rules.bzl", "wpilib_cc_binary")
load("//shared/bazel/rules:java_rules.bzl", "wpilib_java_binary")

wpilib_java_binary(
    name = "Main",
    srcs = glob(["src/main/java/**/*.java"]),
    tags = ["wpi-example"],
    deps = [
        "//hal:hal-java",
        "//ntcore:ntcore-java",
        "//wpilibj",
        "//wpimath:wpimath-java",
        "//wpiutil:wpiutil-java",
    ],
)

wpilib_cc_binary(
    name = "DeveloperRobot",
    srcs = ["src/main/native/cpp/Robot.cpp"],
    tags = ["wpi-example"],
    deps = [
        "//wpilibc:wpilibc.shared",
    ],
)
