load("@rules_java//java:defs.bzl", "java_library", "java_plugin")
load("@rules_pkg//:mappings.bzl", "pkg_files")
load("//shared/bazel/rules:java_rules.bzl", "wpilib_java_junit5_test")
load("//shared/bazel/rules:packaging.bzl", "zip_java_srcs")
load("//shared/bazel/rules/publishing:publishing.bzl", "bundle_library_artifacts")

java_library(
    name = "processor-java",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_strip_prefix = "epilogue-processor/src/main/resources/",
    resources = glob(["src/main/resources/**"]),
    visibility = ["//visibility:public"],
    runtime_deps = [
        "//wpilibNewCommands:wpilibNewCommands-java",
    ],
    deps = [
        "//epilogue-runtime:epilogue-java",
    ],
)

pkg_files(
    name = "resources",
    srcs = glob(["src/main/resources/**"]),
    strip_prefix = "src/main/resources/",
)

zip_java_srcs(
    name = "epilogue-processor",
    extra_pkgs = [":resources"],
)

java_plugin(
    name = "plugin",
    processor_class = "edu.wpi.first.epilogue.processor.AnnotationProcessor",
    visibility = ["//visibility:public"],
    deps = [
        ":processor-java",
    ],
)

wpilib_java_junit5_test(
    name = "processor-test",
    srcs = glob(["src/test/java/**/*.java"]),
    plugins = [
        ":plugin",
    ],
    deps = [
        ":processor-java",
        "@maven//:com_google_testing_compile_compile_testing",
    ],
)

bundle_library_artifacts(
    name = "publishing_bundle",
    group_id = "edu.wpi.first.epilogue",
    java_pkg = "libepilogue-processor-java-sources",
    library_base_name = "epilogue-processor",
)
