load("//shared/bazel/rules:cc_rules.bzl", "wpilib_cc_library")
load("//shared/bazel/rules:java_rules.bzl", "wpilib_java_junit5_test", "wpilib_java_library")
load("//shared/bazel/rules/gen:gen-resources.bzl", "generate_resources")

wpilib_cc_library(
    name = "fieldImages-cpp",
    srcs = ["//fieldImages/src/main/native/resources:generate-resources"] + glob(["src/main/native/cpp/**"]),
    hdrs = glob(["src/main/native/include/**/*"]),
    strip_include_prefix = "src/main/native/include",
    visibility = ["//visibility:public"],
    deps = [
    ],
)

wpilib_java_library(
    name = "fieldImages-java",
    srcs = glob(["*.java"]),
    resource_strip_prefix = "fieldImages/src/main/native/resources",
    resources = ["//fieldImages/src/main/native/resources:java-resources"],
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
    ],
)

generate_resources(
    name = "generate-resources",
    namespace = "fields",
    prefix = "FIELDS",
    resource_files = glob(["edu/**"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "java-resources",
    srcs = glob(["edu/**"]),
    visibility = ["//visibility:public"],
)

wpilib_java_junit5_test(
    name = "fieldImages-test",
    size = "small",
    srcs = glob(["*.java"]),
    deps = [
        "//fieldImages/src/main/java/edu/wpi/first/fields:fieldImages-java",
    ],
)
