load("//shared/bazel/rules:cc_rules.bzl", "wpilib_cc_static_and_shared_library")
load("//shared/bazel/rules:java_rules.bzl", "wpilib_java_junit5_test", "wpilib_java_library")
load("//shared/bazel/rules:publishing.bzl", "assemble_cpp_library", "assemble_java_library", "bundle_artifacts")
load("//shared/bazel/rules/gen:gen-resources.bzl", "generate_resources")

generate_resources(
    name = "generate-resources",
    namespace = "fields",
    prefix = "FIELDS",
    resource_files = glob(["src/main/native/resources/**"]),
    visibility = ["//visibility:public"],
)

wpilib_cc_static_and_shared_library(
    name = "fieldImages",
    srcs = [":generate-resources"] + glob(["src/main/native/cpp/**"]),
    hdrs = glob(["src/main/native/include/**/*"]),
    strip_include_prefix = "src/main/native/include",
    visibility = ["//visibility:public"],
)

wpilib_java_library(
    name = "fieldImages-java",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_strip_prefix = "fieldImages/src/main/native/resources",
    resources = glob(["src/main/native/resources/**"]),
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
    ],
)

wpilib_java_junit5_test(
    name = "fieldImages-test",
    size = "small",
    srcs = glob(["src/test/java/**/*.java"]),
    deps = [
        ":fieldImages-java",
    ],
)

assemble_cpp_library(
    base_name = "fieldImages",
    hdr_directories = ["src/main/native/include"],
    shared_library_pkg_files = "fieldImages.shared_pkg_files",
    src_directories = ["src/main/native/cpp"],
    static_library_pkg_files = "fieldImages.static_pkg_files",
    include_license_files_in_srcs = True,
)

assemble_java_library(
    base_name = "fieldImages",
    src_directories = [
        "src/main/java",
        "src/main/native/resources",
    ],
)

bundle_artifacts(
    name = "fieldImages-publishing",
    artifacts = [
        ("edu.wpi.first.fieldImages:fieldImages-cpp:-headers", "fieldImages.hdrs_pkg"),
        ("edu.wpi.first.fieldImages:fieldImages-cpp:-sources", "fieldImages.srcs_pkg"),
        ("edu.wpi.first.fieldImages:fieldImages-cpp:-{platform}", "fieldImages.shared_pkg"),
        ("edu.wpi.first.fieldImages:fieldImages-cpp:-{platform}static", "fieldImages.static_pkg"),
        ("edu.wpi.first.fieldImages:fieldImages-java:-sources", "fieldImages.java_srcs_pkg"),
    ],
)
