load("//shared/bazel/rules:cc_rules.bzl", "wpilib_cc_binary", "wpilib_cc_library")
load("//shared/bazel/rules/gen:gen-resources.bzl", "generate_resources")
load("//shared/bazel/rules/gen:gen-version-file.bzl", "generate_version_file")

wpilib_cc_library(
    name = "libglass",
    srcs = glob(["src/lib/native/cpp/**/*.cpp"]),
    hdrs = glob(["src/lib/native/include/**"]),
    strip_include_prefix = "src/lib/native/include",
    tags = [
        "wpi-cpp-gui",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//fieldImages:fieldImages.static",
        "//wpigui",
        "//wpimath:wpimath.shared",
        "//wpiutil:wpiutil.shared",
    ],
)

wpilib_cc_library(
    name = "libglassnt",
    srcs = glob(["src/libnt/native/cpp/*.cpp"]),
    hdrs = glob(["src/libnt/native/include/**/*.h"]),
    strip_include_prefix = "src/libnt/native/include",
    tags = [
        "wpi-cpp-gui",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":libglass",
        "//ntcore:ntcore.shared",
    ],
)

generate_version_file(
    name = "generate-version",
    output_file = "WPILibVersion.cpp",
    template = "src/app/generate/WPILibVersion.cpp.in",
)

generate_resources(
    name = "generate-resources",
    namespace = "glass",
    prefix = "GLASS",
    resource_files = glob(["src/app/native/resources/*"]),
)

wpilib_cc_binary(
    name = "glassApp",
    srcs = [
        ":generate-resources",
        ":generate-version",
    ] + glob(["src/app/native/cpp/**"]),
    linkopts = select({
        "@bazel_tools//src/conditions:windows": ["-SUBSYSTEM:WINDOWS"],
        "//conditions:default": [],
    }),
    tags = [
        "wpi-cpp-gui",
    ],
    deps = [
        ":libglassnt",
    ],
)
